src_old/objects/ServiceAttribute__c.object
<CustomObject>
    <description>Service Attribute relates one or more Attributes to a Service. Service Attribute is related to Service, Attribute, and Project Service Attribute.</description>
    <fields>
        <fullName>AttributeName__c</fullName>
        <formula>Attribute__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeNumber__c</fullName>
        <formula>Attribute__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeOrder__c</fullName>
        <label>Attribute Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttributeTitle__c</fullName>
        <formula>Attribute__r.AttributeTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeType__c</fullName>
        <formula>TEXT(Attribute__r.AttributeType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Service Attributes</relationshipLabel>
        <relationshipName>Service_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultAttributeValue__c</fullName>
        <label>Default Attribute Value</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExcludeFromJobManual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Job Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To set visibility of an attribute within a Service.</description>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Service Attributes</relationshipLabel>
        <relationshipName>Service_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Attribute</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Service Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>